--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -7,51 +7,77 @@ on:
     branches: ["main"]
   workflow_dispatch:
 
-env:
-  macos-service-identifier: "39d18052-e25d-4df7-868c-63279f7fb191"
-  linux-service-identifier1: "a6637425-7127-4591-9314-b1ca9f239c2a"
-  linux-service-identifier2: "1261d2f5-01f9-4e03-b50a-d37c7bcd03b0"
-  windows-service-identifier: "bcc71905-d368-4220-9232-028f2e120a2b"
-
 jobs:
+  create-identifiers:
+    runs-on: ubuntu-latest
+    outputs:
+      macos-service-subnet: ${{ steps.subnets.outputs.macos-subnet }}
+      linux-service-subnet1: ${{ steps.subnets.outputs.linux-subnet1 }}
+      linux-service-subnet2: ${{ steps.subnets.outputs.linux-subnet2 }}
+      windows-service-subnet: ${{ steps.subnets.outputs.windows-subnet }}
+      macos-service-identifier: ${{ steps.identifiers.outputs.macos-service-identifier }}
+      linux-service-identifier1: ${{ steps.identifiers.outputs.linux-service-identifier1 }}
+      linux-service-identifier2: ${{ steps.identifiers.outputs.linux-service-identifier2 }}
+      windows-service-identifier: ${{ steps.identifiers.outputs.windows-service-identifier }}
+    steps:
+      - id: identifiers
+        shell: bash
+        run: |
+          echo "macos-service-identifier=$(uuidgen)" >> $GITHUB_OUTPUT
+          echo "linux-service-identifier1=$(uuidgen)" >> $GITHUB_OUTPUT
+          echo "linux-service-identifier2=$(uuidgen)" >> $GITHUB_OUTPUT
+          echo "windows-service-identifier=$(uuidgen)" >> $GITHUB_OUTPUT
+      - id: subnets
+        shell: bash
+        run: |
+          echo "macos-service-subnet=192.168.0.0" >> $GITHUB_OUTPUT
+          echo "linux-service-subnet1=192.168.1.0" >> $GITHUB_OUTPUT
+          echo "linux-service-subnet2=192.168.2.0" >> $GITHUB_OUTPUT
+          echo "windows-service-subnet=192.168.3.0" >> $GITHUB_OUTPUT
+
   linux-service1:
     runs-on: ubuntu-latest
+    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          service-identifier: ${{ env.linux-service-identifier1 }}
+          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier1 }}
 
   linux-service2:
     runs-on: ubuntu-latest
+    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          service-identifier: ${{ env.linux-service-identifier2 }}
+          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier2 }}
 
   windows-service:
     runs-on: windows-latest
+    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          service-identifier: ${{ env.windows-service-identifier }}
+          service-identifier: ${{ needs.create-identifiers.outputs.windows-service-identifier }}
 
   macos-service:
     runs-on: macos-latest
+    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          service-identifier: ${{ env.macos-service-identifier }}
+          service-identifier: ${{ needs.create-identifiers.outputs.macos-service-identifier }}
 
   clients:
     runs-on: ${{ matrix.os }}
+    needs: [create-identifiers]
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -60,38 +86,38 @@ jobs:
       - id: connect1
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ env.linux-service-identifier1 }}
+          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier1 }}
       - id: connect2
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ env.linux-service-identifier2 }}
+          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier2 }}
       - id: connect3
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ env.windows-service-identifier }}
+          service-identifier: ${{ needs.create-identifiers.outputs.windows-service-identifier }}
       - id: connect4
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ env.macos-service-identifier }}
+          service-identifier: ${{ needs.create-identifiers.outputs.macos-service-identifier }}
       - run: ping ${{ steps.connect1.outputs.service-address }}
       - run: ping ${{ steps.connect2.outputs.service-address }}
       - run: ping ${{ steps.connect3.outputs.service-address }}
       - run: ping ${{ steps.connect4.outputs.service-address }}
 
   kill:
-    needs: [clients]
     runs-on: ubuntu-latest
+    needs: [clients, create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ env.linux-service-identifier1 }}
+          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier1 }}
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ env.linux-service-identifier2 }}
+          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier2 }}
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ env.windows-service-identifier }}
+          service-identifier: ${{ needs.create-identifiers.outputs.windows-service-identifier }}
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ env.macos-service-identifier }}
+          service-identifier: ${{ needs.create-identifiers.outputs.macos-service-identifier }}
