--- a/.github/actions/workflow-level-service/stop/action.yml
+++ b/.github/actions/workflow-level-service/stop/action.yml
@@ -10,8 +10,7 @@ runs:
   using: "composite"
   steps:
     - shell: bash
-      run: |
-        echo " " > ${{ inputs.service-identifier }}_stop
+      run: echo " " > ${{ inputs.service-identifier }}_stop
     - uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.service-identifier }}_stop
