--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "prettier-plugin-packagejson": "2.4.10",
         "stun": "2.1.0",
         "tar-fs": "3.0.5",
+        "tsx": "^4.7.1",
         "typescript": "5.3.3",
         "uuid": "9.0.1",
         "webpack": "5.82.1",
