--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -45,6 +45,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
+      - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           service-subnet: ${{ needs.create-identifiers.outputs.linux-service-subnet1 }}
@@ -56,6 +57,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
+      - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           service-subnet: ${{ needs.create-identifiers.outputs.linux-service-subnet2 }}
@@ -67,6 +69,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
+      - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           service-subnet: ${{ needs.create-identifiers.outputs.windows-service-subnet }}
@@ -78,6 +81,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
+      - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
           service-subnet: ${{ needs.create-identifiers.outputs.macos-service-subnet }}
@@ -92,6 +96,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
+      - uses: ./.github/actions/install-wireguard
       - id: connect1
         uses: ./.github/actions/workflow-level-service/connect
         with:
