--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "devDependencies": {
         "@actions/artifact": "2.1.1",
         "@actions/core": "1.10.1",
+        "@actions/exec": "1.1.1",
         "@effect/cli": "0.31.7",
         "@effect/experimental": "0.8.6",
         "@effect/platform": "0.43.7",
@@ -68,7 +69,7 @@
         "prettier-plugin-packagejson": "2.4.10",
         "stun": "2.1.0",
         "tar-fs": "3.0.5",
-        "tsx": "^4.7.1",
+        "tsx": "4.7.1",
         "typescript": "5.3.3",
         "uuid": "9.0.1",
         "webpack": "5.82.1",
