--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -15,10 +15,6 @@ jobs:
   create-identifiers:
     runs-on: ubuntu-latest
     outputs:
-      macos-service-subnet: ${{ steps.subnets.outputs.macos-service-subnet }}
-      linux-service-subnet1: ${{ steps.subnets.outputs.linux-service-subnet1 }}
-      linux-service-subnet2: ${{ steps.subnets.outputs.linux-service-subnet2 }}
-      windows-service-subnet: ${{ steps.subnets.outputs.windows-service-subnet }}
       macos-service-identifier: ${{ steps.identifiers.outputs.macos-service-identifier }}
       linux-service-identifier1: ${{ steps.identifiers.outputs.linux-service-identifier1 }}
       linux-service-identifier2: ${{ steps.identifiers.outputs.linux-service-identifier2 }}
@@ -27,17 +23,10 @@ jobs:
       - id: identifiers
         shell: bash
         run: |
-          echo "macos-service-identifier=$(uuidgen)" >> $GITHUB_OUTPUT
-          echo "linux-service-identifier1=$(uuidgen)" >> $GITHUB_OUTPUT
-          echo "linux-service-identifier2=$(uuidgen)" >> $GITHUB_OUTPUT
-          echo "windows-service-identifier=$(uuidgen)" >> $GITHUB_OUTPUT
-      - id: subnets
-        shell: bash
-        run: |
-          echo "macos-service-subnet=192.168.0.0" >> $GITHUB_OUTPUT
-          echo "linux-service-subnet1=192.168.1.0" >> $GITHUB_OUTPUT
-          echo "linux-service-subnet2=192.168.2.0" >> $GITHUB_OUTPUT
-          echo "windows-service-subnet=192.168.3.0" >> $GITHUB_OUTPUT
+          echo "macos-service-identifier=1" >> $GITHUB_OUTPUT
+          echo "linux-service-identifier1=2" >> $GITHUB_OUTPUT
+          echo "linux-service-identifier2=3" >> $GITHUB_OUTPUT
+          echo "windows-service-identifier=4" >> $GITHUB_OUTPUT
 
   linux-service1:
     runs-on: ubuntu-latest
@@ -48,7 +37,6 @@ jobs:
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-subnet: ${{ needs.create-identifiers.outputs.linux-service-subnet1 }}
           service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier1 }}
 
   linux-service2:
@@ -60,7 +48,6 @@ jobs:
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-subnet: ${{ needs.create-identifiers.outputs.linux-service-subnet2 }}
           service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier2 }}
 
   windows-service:
@@ -72,7 +59,6 @@ jobs:
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-subnet: ${{ needs.create-identifiers.outputs.windows-service-subnet }}
           service-identifier: ${{ needs.create-identifiers.outputs.windows-service-identifier }}
 
   macos-service:
@@ -84,7 +70,6 @@ jobs:
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-subnet: ${{ needs.create-identifiers.outputs.macos-service-subnet }}
           service-identifier: ${{ needs.create-identifiers.outputs.macos-service-identifier }}
 
   clients:
