--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -12,13 +12,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  debug:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-
   create-identifiers:
     runs-on: ubuntu-latest
     outputs:
@@ -109,6 +102,8 @@ jobs:
       - run: ping ${{ steps.connect2.outputs.service-address }}
       - run: ping ${{ steps.connect3.outputs.service-address }}
       - run: ping ${{ steps.connect4.outputs.service-address }}
+      - if: ${{ always() }}
+        uses: mxschmitt/action-tmate@v3
 
   stop-services:
     if: ${{ always() }}
