--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -11,70 +11,55 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
-jobs:
-  create-identifiers:
-    runs-on: ubuntu-latest
-    outputs:
-      macos-service-identifier: ${{ steps.identifiers.outputs.macos-service-identifier }}
-      linux-service-identifier1: ${{ steps.identifiers.outputs.linux-service-identifier1 }}
-      linux-service-identifier2: ${{ steps.identifiers.outputs.linux-service-identifier2 }}
-      windows-service-identifier: ${{ steps.identifiers.outputs.windows-service-identifier }}
-    steps:
-      - id: identifiers
-        shell: bash
-        run: |
-          echo "macos-service-identifier=1" >> $GITHUB_OUTPUT
-          echo "linux-service-identifier1=2" >> $GITHUB_OUTPUT
-          echo "linux-service-identifier2=3" >> $GITHUB_OUTPUT
-          echo "windows-service-identifier=4" >> $GITHUB_OUTPUT
+env:
+  macos-service-identifier: "1"
+  linux-service-identifier1: "2"
+  linux-service-identifier2: "3"
+  windows-service-identifier: "4"
 
+jobs:
   linux-service1:
     runs-on: ubuntu-latest
-    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier1 }}
+          service-identifier: ${{ env.linux-service-identifier1 }}
 
   linux-service2:
     runs-on: ubuntu-latest
-    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier2 }}
+          service-identifier: ${{ env.linux-service-identifier2 }}
 
   windows-service:
     runs-on: windows-latest
-    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.windows-service-identifier }}
+          service-identifier: ${{ env.windows-service-identifier }}
 
   macos-service:
     runs-on: macos-latest
-    needs: [create-identifiers]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
       - uses: ./.github/actions/install-wireguard
       - uses: ./.github/actions/workflow-level-service/expose
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.macos-service-identifier }}
+          service-identifier: ${{ env.macos-service-identifier }}
 
   clients:
     runs-on: ${{ matrix.os }}
-    needs: [create-identifiers]
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -85,19 +70,19 @@ jobs:
       - id: connect1
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier1 }}
+          service-identifier: ${{ env.linux-service-identifier1 }}
       - id: connect2
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier2 }}
+          service-identifier: ${{ env.linux-service-identifier2 }}
       - id: connect3
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.windows-service-identifier }}
+          service-identifier: ${{ env.windows-service-identifier }}
       - id: connect4
         uses: ./.github/actions/workflow-level-service/connect
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.macos-service-identifier }}
+          service-identifier: ${{ env.macos-service-identifier }}
       - run: ping ${{ steps.connect1.outputs.service-address }}
       - run: ping ${{ steps.connect2.outputs.service-address }}
       - run: ping ${{ steps.connect3.outputs.service-address }}
@@ -106,21 +91,21 @@ jobs:
   stop-services:
     if: ${{ always() }}
     runs-on: ubuntu-latest
-    needs: [clients, create-identifiers]
+    needs: [clients]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier1 }}
+          service-identifier: ${{ env.linux-service-identifier1 }}
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.linux-service-identifier2 }}
+          service-identifier: ${{ env.linux-service-identifier2 }}
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.windows-service-identifier }}
+          service-identifier: ${{ env.windows-service-identifier }}
       - uses: ./.github/actions/workflow-level-service/stop
         with:
-          service-identifier: ${{ needs.create-identifiers.outputs.macos-service-identifier }}
+          service-identifier: ${{ env.macos-service-identifier }}
 
   # https://github.com/orgs/community/discussions/26822
   pr-can-merge:
