--- a/.github/actions/workflow-level-service/expose/action.yml
+++ b/.github/actions/workflow-level-service/expose/action.yml
@@ -21,7 +21,7 @@ runs:
     # FIXME: can we get rid of this sudo -E?
     - name: "Expose service (Unix)"
       shell: bash
-      if: runner.os !== 'Windows'
+      if: runner.os != 'Windows'
       run: sudo -E ./node_modules/.bin/tsx .github/actions/workflow-level-service/expose/expose.ts
       env:
         SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
