--- a/.github/actions/workflow-level-service/connect/action.yml
+++ b/.github/actions/workflow-level-service/connect/action.yml
@@ -32,4 +32,5 @@ runs:
         SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
 
     - name: "Test connection"
+      shell: bash
       run: ping ${{ steps.connect.outputs.service-address }}
