--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -59,10 +59,11 @@ jobs:
           service-identifier: ${{ env.macos-service-identifier }}
 
   clients:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    # runs-on: ${{ matrix.os }}
+    # strategy:
+    #   matrix:
+    #     os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/common-setup
