--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -58,6 +58,11 @@ jobs:
         with:
           service-identifier: ${{ env.macos-service-identifier }}
 
+  debug:
+    runs-on: windows-latest
+    steps:
+      - uses: mxschmitt/action-tmate@v3
+
   clients:
     # runs-on: ${{ matrix.os }}
     # strategy:
