--- a/.github/actions/install-wireguard/action.yml
+++ b/.github/actions/install-wireguard/action.yml
@@ -18,5 +18,6 @@ runs:
       shell: pwsh
       run: |
         choco install wireguard
+        Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
         refreshenv
         wg-quick
