--- a/.github/actions/install-wireguard/action.yml
+++ b/.github/actions/install-wireguard/action.yml
@@ -20,3 +20,4 @@ runs:
         choco install wireguard
         Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
         refreshenv
+        wg --help
