--- a/.github/actions/workflow-level-service/connect/action.yml
+++ b/.github/actions/workflow-level-service/connect/action.yml
@@ -13,6 +13,9 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: "Install WireGuard"
+      uses: ./.github/actions/install-wireguard
+
     - name: "Export runtime variables"
       uses: actions/github-script@v7
       env:
