--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-temp/
-dist/
-node_modules/
-**/playground.ts
+*.tsbuildinfo
+.DS_Store
+
+/dist/
+/build/
+/coverage/
+/node_modules/
+/docs/examples/
