--- a/package.json
+++ b/package.json
@@ -4,61 +4,114 @@
     "description": "Moby/Docker API client built using effect-ts",
     "keywords": [
         "moby",
-        "docker"
+        "docker",
+        "effect-ts"
     ],
     "homepage": "https://github.com/leonitousconforti/the-moby-effect",
+    "bugs": {
+        "url": "https://github.com/leonitousconforti/the-moby-effect/issues",
+        "email": "leo@leoconforti.us"
+    },
     "repository": {
         "type": "git",
-        "url": "https://github.com/leonitousconforti/the-moby-effect.git"
+        "url": "git+https://github.com/leonitousconforti/the-moby-effect.git"
     },
-    "license": "MIT",
+    "license": "GPL-3.0-only",
     "author": "Leo Conforti <leo@leoconforti.us> (https://leoconforti.us)",
     "type": "module",
-    "main": "dist/src/index.js",
-    "bin": {
-        "the-moby-effect": "dist/cli/cli.cjs"
+    "main": "./dist/cjs/index.js",
+    "module": "./dist/esm/index.js",
+    "types": "./dist/dts/index.d.ts",
+    "directories": {
+        "doc": "docs",
+        "example": "examples",
+        "test": "test"
     },
-    "files": [
-        "dist/src",
-        "dist/cli",
-        "dist/package.json"
-    ],
     "scripts": {
-        "build": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test --clean --production",
-        "dev": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" heft test-watch --clean"
+        "build": "pnpm clean && pnpm codegen && pnpm build-esm && pnpm build-cjs && pnpm build-annotate && build-utils pack-v2 && pnpm build-submodules && docgen",
+        "build-annotate": "babel build --plugins annotate-pure-calls --out-dir build --source-maps",
+        "build-cjs": "babel build/esm --plugins @babel/transform-export-namespace-from --plugins @babel/transform-modules-commonjs --out-dir build/cjs --source-maps",
+        "build-esm": "tsc -b tsconfig.build.json",
+        "build-submodules": "./submodules/build.mjs",
+        "check": "tsc -b tsconfig.json",
+        "clean": "rimraf .tsbuildinfo docs build dist coverage && rimraf --glob src/internal/*-wireguard-go src/internal/*-wg-quick src/internal/*-wintun.dll src/internal/LICENSE-* src/internal/*.exe src/internal/*-bzImage",
+        "codegen": "build-utils prepare-v2",
+        "coverage": "vitest --coverage",
+        "lint": "eslint .",
+        "test": "vitest"
+    },
+    "resolutions": {
+        "rollup": "npm:@rollup/wasm-node"
     },
     "dependencies": {
         "ssh2": "~1.15.0"
     },
     "devDependencies": {
-        "@effect/cli": "0.35.29",
-        "@effect/platform": "0.48.27",
-        "@effect/platform-node": "0.45.29",
-        "@effect/printer": "0.32.3",
-        "@effect/printer-ansi": "0.32.27",
-        "@effect/schema": "0.64.20",
-        "@effect/typeclass": "0.23.18",
-        "@types/node": "20.12.7",
-        "@types/ssh2": "1.15.0",
-        "@types/tar-fs": "2.0.4",
-        "ci-info": "4.0.0",
-        "cross-env": "7.0.3",
-        "effect": "2.4.18",
-        "eslint": "9.0.0",
-        "fast-check": "3.17.1",
+        "@babel/cli": "7.24.5",
+        "@babel/core": "7.24.5",
+        "@babel/plugin-transform-export-namespace-from": "7.24.1",
+        "@babel/plugin-transform-modules-commonjs": "7.24.1",
+        "@effect/build-utils": "0.7.6",
+        "@effect/docgen": "0.4.3",
+        "@effect/eslint-plugin": "0.1.2",
+        "@effect/language-service": "0.1.0",
+        "@effect/platform": "0.52.2",
+        "@effect/platform-node": "0.48.3",
+        "@effect/printer": "0.33.11",
+        "@effect/printer-ansi": "0.33.11",
+        "@effect/schema": "0.66.14",
+        "@effect/typeclass": "0.24.11",
+        "@effect/vitest": "0.4.1",
+        "@rollup/wasm-node": "4.17.2",
+        "@types/node": "20.12.8",
+        "@typescript-eslint/eslint-plugin": "7.8.0",
+        "@typescript-eslint/parser": "7.8.0",
+        "@typescript-eslint/utils": "7.8.0",
+        "@vitest/coverage-v8": "1.6.0",
+        "babel-plugin-annotate-pure-calls": "0.4.0",
+        "effect": "3.1.2",
+        "eslint": "9.1.1",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-import-resolver-typescript": "3.6.1",
+        "eslint-plugin-codegen": "0.28.0",
+        "eslint-plugin-deprecation": "2.0.0",
+        "eslint-plugin-import": "2.29.1",
+        "eslint-plugin-prettier": "5.1.3",
+        "eslint-plugin-sort-destructure-keys": "2.0.0",
+        "fast-check": "3.18.0",
+        "list-item": "2.0.0",
+        "markdown-link": "0.1.1",
+        "mixin-deep": "2.0.1",
+        "object.pick": "1.3.0",
         "prettier": "3.2.5",
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.5.0",
-        "tar-fs": "3.0.5",
+        "remarkable": "2.0.1",
+        "rimraf": "5.0.5",
+        "tsx": "4.9.0",
         "typescript": "5.4.5",
-        "ws": "8.16.0"
+        "vite": "5.2.11",
+        "vitest": "1.6.0",
+        "ws": "8.17.0"
     },
     "peerDependencies": {
         "@effect/platform-node": "0.42.7",
         "@effect/schema": "0.61.5",
         "effect": "~2.2.0"
     },
+    "packageManager": "pnpm@8.15.4",
     "engines": {
-        "node": ">=16"
+        "node": ">=18.0.0"
+    },
+    "publishConfig": {
+        "access": "public",
+        "directory": "dist",
+        "provenance": true
+    },
+    "pnpm": {
+        "patchedDependencies": {
+            "@effect/build-utils@0.7.6": "patches/@effect__build-utils@0.7.6.patch",
+            "@effect/docgen@0.4.2": "patches/@effect__docgen@0.4.2.patch"
+        }
     }
 }
