--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,9 @@
 {
-    // Can be used once https://github.com/microsoft/rushstack/pull/4103 is merged?
-    // "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node18/tsconfig.json"],
-
-    "compilerOptions": {
-        "pretty": true,
-        "sourceMap": true,
-        "declaration": true,
-        "outDir": "./dist",
-        "resolveJsonModule": true,
-        "types": ["node", "heft-jest"],
-
-        // https://github.com/tsconfig/bases/blob/main/bases/node18.json
-        "lib": ["es2022"],
-        "target": "es2022",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-
-        // https://github.com/tsconfig/bases/blob/main/bases/strictest.json
-        "strict": true,
-        "allowUnusedLabels": false,
-        "allowUnreachableCode": false,
-        "exactOptionalPropertyTypes": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitOverride": true,
-        "noImplicitReturns": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "noUncheckedIndexedAccess": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "isolatedModules": true,
-        "forceConsistentCasingInFileNames": true
-    },
-    "include": ["bin/**/*.ts", "src/**/*.ts", "test/**/*.ts", "examples/**/*.ts", ".github/**/*.ts"]
+    "extends": "./tsconfig.base.json",
+    "include": [],
+    "references": [
+        { "path": "./tsconfig.src.json" },
+        { "path": "./tsconfig.test.json" },
+        { "path": "./tsconfig.examples.json" }
+    ]
 }
