--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,58 @@
 {
-    "cSpell.words": ["codegen", "docgen", "packagejson", "typeclass"]
+    "cSpell.words": [
+        "Blkio",
+        "cachemount",
+        "cfssl",
+        "cgroupfs",
+        "cgroups",
+        "codegen",
+        "Conforti",
+        "containerd",
+        "Cpuset",
+        "Datacenter",
+        "devcontainers",
+        "dnsrr",
+        "docgen",
+        "Domainname",
+        "GOARCH",
+        "goroutines",
+        "healthcheck",
+        "HKEY",
+        "HKLM",
+        "hyperv",
+        "IPAM",
+        "kmem",
+        "leonitousconforti",
+        "moby",
+        "Mountpoint",
+        "mountpoints",
+        "namedspaced",
+        "NCPU",
+        "ndots",
+        "nofile",
+        "nondistributable",
+        "npipe",
+        "NUMA",
+        "ONBUILD",
+        "onewriter",
+        "operatingsystem",
+        "packagejson",
+        "Pids",
+        "privs",
+        "resolv",
+        "rootfs",
+        "rprivate",
+        "rshared",
+        "rslave",
+        "runc",
+        "runtimes",
+        "seccomp",
+        "serveraddress",
+        "sysctls",
+        "tmpfs",
+        "tsbuildinfo",
+        "typeclass",
+        "Ulimits",
+        "userns"
+    ]
 }
