--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,26 @@
 {
     "cSpell.words": [
+        "Addrs",
+        "awslogs",
         "Blkio",
         "cachemount",
         "cfssl",
         "cgroupfs",
+        "Cgroupns",
         "cgroups",
         "codegen",
         "Conforti",
         "containerd",
         "Cpuset",
         "Datacenter",
+        "Demux",
         "devcontainers",
         "dnsrr",
         "docgen",
         "Domainname",
+        "etwlogs",
+        "fluentd",
+        "gelf",
         "GOARCH",
         "goroutines",
         "healthcheck",
@@ -29,6 +36,7 @@
         "namedspaced",
         "NCPU",
         "ndots",
+        "nocopy",
         "nofile",
         "nondistributable",
         "npipe",
@@ -49,10 +57,15 @@
         "seccomp",
         "serveraddress",
         "sysctls",
+        "Templating",
         "tmpfs",
         "tsbuildinfo",
         "typeclass",
         "Ulimits",
-        "userns"
+        "unlockkey",
+        "usernamespace",
+        "userns",
+        "VTEP",
+        "VXLAN"
     ]
 }
