--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Addrs",
         "awslogs",
         "Blkio",
+        "buildargs",
+        "cachefrom",
         "cachemount",
         "cfssl",
         "cgroupfs",
@@ -10,16 +12,24 @@
         "cgroups",
         "codegen",
         "Conforti",
+        "conta",
         "containerd",
+        "cpuperiod",
+        "cpuquota",
         "Cpuset",
+        "cpusetcpus",
+        "cpushares",
         "Datacenter",
         "Demux",
         "devcontainers",
         "dnsrr",
         "docgen",
         "Domainname",
+        "endport",
         "etwlogs",
+        "extrahosts",
         "fluentd",
+        "forcerm",
         "gelf",
         "GOARCH",
         "goroutines",
@@ -28,17 +38,24 @@
         "HKLM",
         "hyperv",
         "IPAM",
+        "janedoe",
         "kmem",
         "leonitousconforti",
+        "memswap",
         "moby",
+        "mobydock",
         "Mountpoint",
         "mountpoints",
         "namedspaced",
         "NCPU",
         "ndots",
+        "networkmode",
         "nocopy",
+        "noexec",
         "nofile",
         "nondistributable",
+        "noprune",
+        "nosuid",
         "npipe",
         "NUMA",
         "ONBUILD",
@@ -48,6 +65,7 @@
         "Pids",
         "privs",
         "resolv",
+        "rize",
         "rootfs",
         "rprivate",
         "rshared",
@@ -56,16 +74,23 @@
         "runtimes",
         "seccomp",
         "serveraddress",
+        "shmsize",
+        "someimage",
+        "someuser",
+        "SQUIGGLYS",
+        "startport",
         "sysctls",
         "Templating",
         "tmpfs",
         "tsbuildinfo",
         "typeclass",
+        "UIDGID",
         "Ulimits",
         "unlockkey",
         "usernamespace",
         "userns",
         "VTEP",
-        "VXLAN"
+        "VXLAN",
+        "WORKDIR"
     ]
 }
