--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "@rollup/wasm-node": "4.17.2",
         "@types/node": "20.12.8",
         "@types/ssh2": "1.15.0",
+        "@types/tar-fs": "2.0.4",
         "@typescript-eslint/eslint-plugin": "7.8.0",
         "@typescript-eslint/parser": "7.8.0",
         "@typescript-eslint/utils": "7.8.0",
@@ -83,6 +84,7 @@
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.5.0",
         "rimraf": "5.0.5",
+        "tar-fs": "3.0.6",
         "tsx": "4.9.0",
         "typescript": "5.4.5",
         "vite": "5.2.11",
