--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // spell-checker: disable
 {
-    "name": "Node.js & TypeScript",
+    "name": "the-moby-effect",
     "image": "mcr.microsoft.com/devcontainers/base:bullseye",
 
     "features": {
@@ -38,128 +38,7 @@
                 "editor.codeActionsOnSave": {
                     "source.organizeImports": "always",
                     "source.addMissingImports": "always"
-                },
-                "files.exclude": {
-                    "**/.git": true,
-                    "**/.svn": true,
-                    "**/.hg": true,
-                    "**/CVS": true,
-                    "**/.DS_Store": true,
-                    "**/Thumbs.db": true,
-                    "**/temp": true
-                },
-                "cSpell.words": [
-                    "aaahhhhh",
-                    "Addrs",
-                    "aufs",
-                    "Awslogs",
-                    "Blkio",
-                    "buildargs",
-                    "cachefrom",
-                    "Cachemount",
-                    "certdir",
-                    "Cfssl",
-                    "cgroupfs",
-                    "Cgroupns",
-                    "Cgroups",
-                    "codegen",
-                    "conforti",
-                    "confo014",
-                    "conta",
-                    "containerd",
-                    "cooldown",
-                    "cpuperiod",
-                    "cpuquota",
-                    "cpuset",
-                    "cpusetcpus",
-                    "cpushares",
-                    "Datacenter",
-                    "demux",
-                    "demultiplexing",
-                    "dind",
-                    "Dnsrr",
-                    "Domainname",
-                    "emptystring",
-                    "endport",
-                    "Etwlogs",
-                    "execa",
-                    "extrahosts",
-                    "failcnt",
-                    "Fluentd",
-                    "forcerm",
-                    "Gelf",
-                    "GOARCH",
-                    "goroutines",
-                    "gvtg",
-                    "healthcheck",
-                    "HKEY",
-                    "HKLM",
-                    "Httpv",
-                    "hyperv",
-                    "IPAM",
-                    "ivku",
-                    "janedoe",
-                    "kmem",
-                    "memswap",
-                    "Moby",
-                    "mobydock",
-                    "Mountpoint",
-                    "mountpoints",
-                    "mydockerimage",
-                    "myimage",
-                    "namedspaced",
-                    "NCPU",
-                    "ndots",
-                    "networkmode",
-                    "nocopy",
-                    "noexec",
-                    "nofile",
-                    "nondistributable",
-                    "noprune",
-                    "nosuid",
-                    "npipe",
-                    "NUMA",
-                    "ONBUILD",
-                    "onewriter",
-                    "operatingsystem",
-                    "opencontainers",
-                    "packagejson",
-                    "percpu",
-                    "Pids",
-                    "precpu",
-                    "protobuf",
-                    "resolv",
-                    "rize",
-                    "Rootfs",
-                    "Rprivate",
-                    "Rshared",
-                    "Rslave",
-                    "runc",
-                    "runtimes",
-                    "rushstack",
-                    "seccomp",
-                    "serveraddress",
-                    "shmsize",
-                    "sinds",
-                    "someimage",
-                    "someuser",
-                    "startport",
-                    "Sysctls",
-                    "tarfile",
-                    "Templating",
-                    "Tmpfs",
-                    "tsdoc",
-                    "typeclass",
-                    "UIDGID",
-                    "Ulimits",
-                    "Unlockkey",
-                    "usernamespace",
-                    "Userns",
-                    "VTEP",
-                    "VXLAN",
-                    "WORKDIR",
-                    "Yieldable"
-                ]
+                }
             }
         }
     },
