--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "the-moby-effect",
-    "version": "1.43.0-alpha.4",
+    "version": "1.45.0-alpha.0",
     "description": "Moby/Docker API client built using effect-ts",
     "keywords": [
         "moby",
         "docker",
+        "podman",
         "effect-ts"
     ],
     "homepage": "https://github.com/leonitousconforti/the-moby-effect",
@@ -70,6 +71,7 @@
         "@typescript-eslint/utils": "7.8.0",
         "@vitest/coverage-v8": "1.6.0",
         "babel-plugin-annotate-pure-calls": "0.4.0",
+        "ci-info": "4.0.0",
         "effect": "3.1.2",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
@@ -92,7 +94,8 @@
         "ws": "8.17.0"
     },
     "peerDependencies": {
-        "@effect/platform-node": "0.48.3",
+        "@effect/platform": "0.52.3",
+        "@effect/platform-node": "0.48.4",
         "@effect/schema": "0.66.14",
         "effect": "3.1.2"
     },
