--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "Datacenter",
         "Demux",
         "devcontainers",
+        "dind",
         "dnsrr",
         "docgen",
         "Domainname",
