enable resolve json module for clis to find package json

--- a/tsconfig.bin.json
+++ b/tsconfig.bin.json
@@ -5,6 +5,7 @@
     "compilerOptions": {
         "noEmit": true,
         "rootDir": "bin",
+        "resolveJsonModule": true,
         "tsBuildInfoFile": ".tsbuildinfo/bin.tsbuildinfo"
     }
 }
