add another word

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "dnsrr",
         "docgen",
         "Domainname",
+        "dprint",
         "endport",
         "etwlogs",
         "extrahosts",
